--- a/physiology.html
+++ b/physiology.html
@@ -299,13 +299,53 @@ Answer: <p style="color:white"> D. The process responsible for repolarization is
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. Blockade of the Na+ channels would prevent action potentials. The upstroke of the action potential depends on the entry of Na+ into the cell through these channels and would therefore also be reduced or abolished. The absolute refractory period would be lengthened because it is based on the availability of the Na+ channels. The hyperpolarizing afterpotential is related to increased K+ permeability. The Na+ equilibrium potential is calculated from the Nernst equation and is the theoretical potential at electrochemical equilibrium and does not depend on whether the Na+ channels are open or closed.</p>
+  In an experimental preparation of a nerve axon, membrane potential (E<sub>m</sub>), K+ equilibrium potential, and K+ conductance can be measured. Which combination of values will create the largest outward current flow?<br>
+  <table>
+  <tr> <th>Choice</th> 
+    <th>E<sub>m</sub> (mV)</th> 
+    <th>E<sub>K</sub> (mV)</th>
+    <th>K conductance (relative units)</th> 
+  </tr> 
+    <tr> <td><input type="radio" id="A" name="1" value="A">
+  <label for="male">A. </label></td> 
+  <td>-90</td>
+  <td>-90</td> 
+  <td>1</td> 
+  </tr> 
+  <tr><td> <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. </label></td>
+    <td>-100</td>
+    <td>-90</td>
+    <td>1</td>
+  <tr><td><input type="radio" id="C" name="1" value="C">
+    <label for="other"> C. </label></td>
+    <td>-50</td>
+    <td>-90</td>
+    <td>1</td>
+  <tr><td><input type="radio" id="D" name="1" value="D">
+     <label for="other"> D. </label></td>
+    <td>0</td>
+    <td>-90</td>
+    <td>1</td>
+  <tr><td><input type="radio" id="E" name="1" value="E">
+    <label for="other"> E. </label></td>
+    <td>+20</td>
+    <td>-90</td>
+    <td>1</td>
+   <tr><td><input type="radio" id="F" name="1" value="F">
+     <label for="other"> F. </label></td>
+     <td>-90</td>
+     <td>-90</td>
+     <td>2</td>
+  </table></style></p>
+Answer: <p style="color:white">E. Data sets A and F have no difference between membrane potential (E<sub>m</sub>) and E<sub>K</sub> and thus have no driving force or current flow; although data set F has the higher K+ conductance, this is irrelevant since the driving cource is 0. Data sets C, D, and E all will have outward K+ current, since E<sub>m</sub> is less negative than E<sub>K</sub>; of these, data set E will have the largest outward K+ current because it has the highest driving force. Data set B will have inward K+ current since E<sub>m</sub> is more negative than E<sub>K</sub> </p>
   <b>Neuromuscular and synaptic transmission</b><br>
   The correct temporal sequence for events at the neuromuscular junction is
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Action potential in the motor nerve; depolarization of the muscle end plate; uptake of Ca++ into the presynaptic nerve terminal </label><br>
   <input type="radio" id="B" name="1" value="B">
-  <label for="female"> B. Uptake of Ca++ into the presynaptic terminal; release of acetylcholine; depolarization of the muscle end plate</label><br>
+  <label for="female"> B. Uptake of Ca++ into the presynaptic terminal; release of acetylcholine; depolarization of the muscle end plate</label><br> 
   <input type="radio" id="C" name="1" value="C">
   <label for="other"> C. Release of Ach; action potential in the motor nerve; action potential in the muscle</label><br>
   <input type="radio" id="D" name="1" value="D">
@@ -342,6 +382,20 @@ Answer: <p style="color:white"> D. An inhibitory postsynaptic potential hyperpol
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> B. Myasthenia gravis is characterized by a decreased density of ACh receptors at the muscle end plate. An AChE inhibitor blocks degradation of ACh in the neuromuscular junction, so levels at the muscle end plate remain high, partially compensating for the deficiency of receptors.</p>
+Which autonomic receptor is blocked by hexamethonium at the ganglia, but not at the neuromuscular junction?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. adrenergic &alpha; receptors</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. adrenergic &beta;<sub>1</sub> receptors</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. adrenergic &beta;<sub>2</sub> receptors</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. cholinergic muscarinic receptors</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. cholinergic nicotinic receptors</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> E. Hexamethonium is a nicotinic blocker, but it acts only at ganglionic (not neuromuscular junction) nicotinic receptors. This pharmacologic distinction emphasizes that nicotinic receptors at these two locations, although similar, are not identical.</p>
   <b>Skeletal Muscle</b><br>
    Repeated stimulation of a skeletal muscle fiber causes a sustained contraction (tetanus). Accumulation of which solute in intracellular fluid is responsible for the tetanus?
   <form>
@@ -483,7 +537,63 @@ Answer: <p style="color:white"> D. Binding of ACh to receptors in the muscle end
   <h2>Neurophysiology</h2><br>
   <b>Autonomic Nervous System</b><br>
   <b>Sensory Systems</b><br>
+Which of the following is a property of C fibers?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Have the slowest conduction velocity of any nerve fiber type</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Have the largest diameter of any nerve fiber type</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Are afferent nerves from muscle spindles</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Are afferent nerves from Golgi tendon organs</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Are preganglionic autonomic fibers</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. C fibers (slow pain) are the smallest nerve fibers and therefore have the slowest conduction velocity.</p>
+When compared with the cones of the retina, the rods <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. are more sensitive to low-intensity light</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. adapt to darkness before the cones</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. are most highly concentrated on the fovea</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. are primarily involved in color vision</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. Of the two types of photoreceptors, the rods are more sensitive to low-intensity light and therefore are more important than the cones for night vision. They adapt to darkness after the cones. Rods are not present in the fovea. The cones are primarily involved in color vision.</p>
+Which of the following statements best describes the basilar membrane of the organ of Corti?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. The apex responds better to low frequencies than the base does</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. The base is wider than the apex</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. The base is more compliant than the apex</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. High frequencies produce maximal displacement of the basilar membrane near the helicotrema</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. The apex is relatively stiff compared to the base</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Sound frequencies can be encoded by the organ of Corti because of differences in properties along the basilar membrane. The base of the basilar membrane is narrow and stiff, and hair cells on it are activated by high frequencies. The apex of the membrane is wide and compliant, and hair cells on it are activated by low frequencies. </p>
   <b>Motor Systems</b><br>
+Which of the following responses is mediated by parasympathetic muscarinic receptors?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Dilation of bronchiolar smooth muscle</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Erection</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Ejaculation</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Constriction of GI sphincters</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E.Increased cardiac contractility </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+  </form> 
+Answer: <p style="color:white"> B. Erection if a parasympathetic muscarinic response. Dilation of the bronchioles, ejaculation, constriction of the GI sphincters, and increased cardiac contractility are all sympathetic &alpha; or &beta; responses.</p>
   <b>Higher Functions of the Cerebral Cortex</b><br>
   Which of the following is an inhibitory neurotransmitter in the central nervous system?<br>
   <form>
@@ -522,6 +632,32 @@ Answer: <p style="color:white"> C. &gamma;-Aminobutyric acid (GABA) is an inhibi
   <b>Cardiac Muscle and Cardiac Output</b><br>
   <b>Cardiac Cycle</b><br>
   <b>Regulation of Arterial Pressure</b><br>
+A 66-year-old man with chronic hypertension is treated with prazosin by his physician. The treatment successfully decreases his blood pressure to within the normal range. What is the mechanism of the drug's action?
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Inhibition of &beta;<sub>1</sub> receptors in the SA node</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Inhibition of &beta;<sub>2</sub> receptors in the SA node</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Stimulation of muscarinic receptors in the SA node</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Stimulation of nicotinic receptors in the SA node</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Inhibition of &beta;<sub>1</sub> receptors in ventricular muscle</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Stimulation of &beta;<sub>1</sub> receptors in ventricular muscle</label><br>
+  <input type="radio" id="G" name="1" value="G">
+  <label for="other"> G. Inhibition of &alpha;<sub>1</sub> receptors in the SA node </label><br>
+  <input type="radio" id="H" name="1" value="H">
+  <label for="other"> H. Stimulation of &alpha;<sub>1</sub> receptors in the SA node</label><br>
+  <input type="radio" id="I" name="1" value="I">
+  <label for="other"> I. Inhibition of &alpha;<sub>1</sub> receptors in the SA node</label><br>
+  <input type="radio" id="J" name="1" value="J">
+  <label for="other"> J. Inhibition of &alpha;<sub>1</sub> receptors on vascular smooth muscle</label><br>
+  <input type="radio" id="K" name="1" value="K">
+  <label for="other"> K.Stimulation of &alpha;<sub>1</sub> receptors on vascular smooth muscle </label><br>
+  <input type="radio" id="L" name="1" value="L">
+  <label for="other"> L. Stimulation of &alpha;<sub>2</sub> receptors on vascular smooth muscle</label><br>
+</form> 
+Answer: <p style="color:white"> J. Prazosin is a specific antagonist of &alpha;<sub>1</sub> receptors, which are present in vascular smooth muscle, but not in the heart. Inhibition of &alpha;<sub>1</sub> receptors results in vasodilation of the cutaneous and splanchnic vascular beds, decreased total peripheral resistance, and decreased blood pressure.</p>
   <b>Microcirculation and Lymph</b><br>
   <b>Special Circulations</b><br>
   <b>Integrative Functions of the Cardiovascular System: Gravity, Exercise, and Hemorrhage</b><br>
