--- a/physiology.html
+++ b/physiology.html
@@ -626,6 +626,20 @@ Which autonomic receptor is activated by low concentrations of epinephrine relea
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> C. Receptors on vascular smooth muscle produce vasodilation. &alpha; receptors on vascular smooth muscle produce vasoconstriction. Because &beta;<sub>2</sub> receptors are more sensitive to epinephrine than are &alpha; receptors, low doses of epinephrine produce vasodilation, and high doses produce vasoconstriction.</p>
+Patients are enrolled in trials of a new atropine analog. Which of the following would be expected? <Br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Increased AV node conduction velocity</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Increased gastric acidity</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Pupillary constriction </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Sustained erection</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Increased sweating</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. An atropine analog would block muscarinic receptors and thus actions mediated by muscarinic recetors. Muscarinic receptors slow AV node conduction velocity, thus muscarinic blocking agents would increase AV node conduction velocity. Muscarinic receptors also increase gastric acid secretion, constrict the pupils, mediate erection, and cause sweating via sympathetic cholinergic innervation of sweat blands, so blocking muscarinic receptors will inhibit all of these actions.</p>
   <b>Sensory Systems</b><br>
 Which of the following is a property of C fibers?<br>
 <form>
@@ -866,6 +880,34 @@ Which of the following structures has a primary function to coordinate rate, ran
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> Output of the Purkinje cells from the cerebellar cortex to deep cerebellar nuclei is inhibitory. This output modulates movement and is responsible for coordination.</p>
+  Which reflex is responsible for polysynaptic excitation of contralateral extensors?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Stretch reflex (myotatic)</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Golgi tendon reflex (inverse myotatic)</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Flexor withdrawal reflex</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Subliminal occlusion reflex</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. Flexor withdrawal is a polysynaptic reflex that is used when a person touches a hot stove or stes on a tack. On the ipsilateral side of the painful stimulus, there is flexion (withdrawal); on the contralateral side, there is extension to maintain balance.</p>
+  Which of the following is a characteristic of nuclear bag fibers?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. They are one type of extrafusal muscle fiber</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. They detect dynamic changes in muscle length</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. They give rise to group 1b afferents</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. They are innervated by &alpha;-motoneurons</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">B. Nuclear bag fibers are one type of intrafusal muscle fiber that make up muscle spindles. They detect dynamic changes in muscle length, give rise to group IA afferent fibers, and are innervated by &gamma;-motoneurons. The other tye of intrafusal muscle fiber, the nuclear chain fiber, detects static changes in muscle length. </p>
   <b>Higher Functions of the Cerebral Cortex</b><br>
   Which of the following is an inhibitory neurotransmitter in the central nervous system?<br>
   <form>
@@ -1000,6 +1042,20 @@ A 66-year-old man with chronic hypertension is treated with prazosin by his phys
   <label for="other"> L. Stimulation of &alpha;<sub>2</sub> receptors on vascular smooth muscle</label><br>
 </form> 
 Answer: <p style="color:white"> J. Prazosin is a specific antagonist of &alpha;<sub>1</sub> receptors, which are present in vascular smooth muscle, but not in the heart. Inhibition of &alpha;<sub>1</sub> receptors results in vasodilation of the cutaneous and splanchnic vascular beds, decreased total peripheral resistance, and decreased blood pressure.</p>
+  A 42-year-old woman with elevated blood pressure, visual disturbances, and vomiting has increased urinary excretion of 3-methoxy-4-hydroxymandelic acid (VMA). CT shows an adrenal mass consistent with a diagnosis of pheochromocytoma. While awaiting surgery to remove the tumor, she is treated with phenoxybenzamine to lower her BP. What is the mechanism of this action of the drug? 
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Increasing cAMP</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Decreasing cAMP</label><br>
+  <input type="radio" id="C" name="1" value="C">
+    <label for="other"> C. Increasing IP<sub>3</sub>)/Ca++</label><br>
+  <input type="radio" id="D" name="1" value="D">
+    <label for="other"> D. Decreasing IP<sub>3</sub>/Ca++</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Opening Na+/K+ channelslabel><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Closing Na+/K+ channels</label><br>
+</form> 
+Answer: <p style="color:white"> D. Pheochromocytoma is a tumor of the adrenal medulla that secretes excessive amounts of NE and epinephrine. Increase BP is due to the activation of &alpha;<sub>1</sub> receptors on vascular smooth muscle and activation of &beta;<sub>1</sub> receptors in the heart. Phenoxybenzamine decreases blood pressure by acting as an &alpha;<sub>1</sub> receptor antagonist, thus decreasing intracellular IP<sub>3</sub>/Ca++</p>
   <b>Microcirculation and Lymph</b><br>
   <b>Special Circulations</b><br>
   <b>Integrative Functions of the Cardiovascular System: Gravity, Exercise, and Hemorrhage</b><br>
