--- a/physiology.html
+++ b/physiology.html
@@ -1012,6 +1012,34 @@ Answer: <p style="color:white"> Pathogens release interleukin-1 from phagocytic 
   <h2>Cardiovascular Physiology</h2><br>
   <b>Circuitry of the Cardiovascular System</b><br>
   <b>Hemodynamics</b><br>
+  A 53-year-old woman is found, by arteriography, to have 50% narrowing of her left renal artery. What is the expected change in blood flow through the stenotic artery? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decrease to half</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Decrease to one quarter</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Decrease to one eighth</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Decrease to one sixteenth</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. No change</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. If the radius of the artery decreased by 50%, then resistance would increase by 2<sup>4</sup> or 16 (R - 8&nu;l/&pi;r<sup>4</sup>). Because blood flow is inversely proportional to resistance, flow will decrease to one sixteenth of the original value.</p>
+  When a person moves from a supine to standing position, which of the following compensatory changes occurs?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decreased heart rate</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Increased contractility</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Decreased total peripheral resistance</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Decreased cardiac output</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Increased PR intervals</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> B. When a person moves to a standing position, blood pools in the leg veins, causing decreased venous return to the heart, decreased cardiac output, and decreased arterial pressure. The baroreceptors detect the decrease in arterial pressure and activate the vasomotor center to increase sympathetic and decrease parasympathetic outflow. There is an increase in heart rate, decreasing PR interval, contractility, and total peripheral resistance. Because both heart rate and contractility are increased, cardiac output will increase towards normal.</p>
   <b>Cardiac Electrophysiology</b><br>
   <b>Cardiac Muscle and Cardiac Output</b><br>
   <b>Cardiac Cycle</b><br>
