--- a/MCB.html
+++ b/MCB.html
@@ -7,7 +7,7 @@
 <br>
   <b>Biochemistry and molecular biology</b><br>
   <i> Gene expression: DNA structure, replication, exchange, and epigenetics (eg, imprinting, X activation, DNA methylation)</i><br>
-  <i> Gene expression: transcription<i> <br>
+  <i> Gene expression: transcription</i> <br>
 <i> Gene expression: translation, post-translational processing, modifications, and disposition of proteins (degradation), including protein/glycoprotein synthesis, intra-extracellular sorting, and processes/functions related to Golgi complex and rough endoplasmic reticulum </i><br>
 <i>Structure and function of proteins and enzymes (eg, enzyme kinetics and structural/regulatory proteins)</i><br>
     <i> Energy metabolism (eg, ATP generation, transport chain)</i><br>
