--- a/microbiology.html
+++ b/microbiology.html
@@ -185,7 +185,7 @@ A 36-year-old carpenter is seen in the emergency room with complaints of jaw and
 </form> 
     Answer: <p style="color:white"> <i>Clostridium perfringens</i> has five serotypes based on the types of extracellular toxins (A-E) made and their tropisms. <i> Clostridium botulinum creates toxins A-G for which a trivalent vaccine covering A, B, and E or a heptavalent vaccine are available. <i>Clostridium tetani</i> has only one major virulence factor, tetanospasmin.</p><br>
     <br></i>
-A 28-year-old man has been taking clindamycin while hospitalized for nearly 2 weeks. He recently started to experience abdominal cramping and watery diarrhea. The attending physician decided to discontinue the antibiotics to see if the diarrhea would resolve. A stool sample was sent to the laboratory for ELISA testing for toxins A and B. What complications might you expect?<br>
+  </i>A 28-year-old man has been taking clindamycin while hospitalized for nearly 2 weeks. He recently started to experience abdominal cramping and watery diarrhea. The attending physician decided to discontinue the antibiotics to see if the diarrhea would resolve. A stool sample was sent to the laboratory for ELISA testing for toxins A and B. What complications might you expect?<br>
 <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Production of a phospholipase C leading to cell membrane and widespread tissue damage with systemic spread of the toxin, and production of enzymes degrading connective tissue and hemoglobin.</label><br>
