--- a/physiology.html
+++ b/physiology.html
@@ -1125,8 +1125,22 @@ The ventricles are completely depolarized during which isoelectric portion of th
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> The PR segment and SR segment are the only portions of the ECG that are isoelectric. The PR interval includes the P wave (atrial depolarization) and the PR segment, which represents conduction through the AV node. During this phase, the ventricles are not yet depolarized. The ST segment is the only isoelectric period when the entire ventricle is depolarized.</p>
+  A 30-year-old female patient's ECG shows two P waves preceding each QRS complex. The interpretation of this pattern is:<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decreased firing rate of the pacemaker in the SA node</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Decreased firing rate of the pacemaker in the AV node</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Increased firing rate of the pacemaker in the SA node</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Decreased conduction through the AV node</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Increased conduction through the His-Purkinje system</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. A pattern of 2 P waves preceding each QRS complex indicates that only every other P wave is conducted through the AV node to the ventricle. Thus, conduction velocity through the AV node must be decreased.</p>
   <b>Cardiac Muscle and Cardiac Output</b><br>
-  If the ejection fraction iuncreases, there will be a decrease in
+  If the ejection fraction increases, there will be a decrease in 
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. cardiac output</label><br>
@@ -1216,6 +1230,20 @@ Answer: <p style="color:white">The first heart sound corresponds to closure of t
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> Stroke volume is the volume ejected from the ventricle and is reresented on the pressure-volume loop as phase B-C; end-diastolic volume is about 140mL and end-systolic volume is about 65 mL; the difference, or stroke volume, is 75mL. Cardiac output is calculated as stroke volume x heart rate  or 75mL x 70 bpm = 5.25L/m. </p>
+  Inspiration "splits" the second heart sound because <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. the aortic valve closes before the pulmonic valve</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. the pulmonic valve closes before thepulmonic valve</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. the pulmonic valve closes before the aortic valve</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. the mitral valve closes before the tricuspid valve</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. the tricuspid valve closes before the mitral valve</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. filling of the ventricles has fast and slow components </label><br>
+</form> 
+Answer: <p style="color:white"> The second heart sound is associated with closure of the aortic and pulmonic valves. Because the aortic vale closes before the pulmonic valve, the sound can be split by inspiration.</p>
   <b>Regulation of Arterial Pressure</b><br>
 A 66-year-old man with chronic hypertension is treated with prazosin by his physician. The treatment successfully decreases his blood pressure to within the normal range. What is the mechanism of the drug's action?
 <form>
@@ -1271,6 +1299,20 @@ A 66-year-old man, who has had a sympathectomy, experiences a greater-than-norma
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> Orthostatic hypotension is a decrease in arterial pressure that occurs when a person moves from a supine to a standing osition. A person with a normal baroreceptor mechanism responds to a decrease in arterial pressure through the vasomotor centerby increasing sympathetic outflow and decreasing parasympathetic outflow. The sympathetic component helps to restore blood pressure by increasing HR, contractility, total peripheral resistance, and mean systemic pressure. In a patient who has undergone a sympathectomy, the sympathetic component of the baroreceptor mechanism is absent.</p>
+    An acute decrease in arterial blood pressure elicits which of the following compensatory changes? 
+    <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decreased firing rate of the carotid sinus nerve</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Increased parasympathetic outflow to the heart</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Decreased heart rate</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Decreased contractility</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Decreased mean systemic pressure</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. A decrease in blood pressure causes decreased stretch of the carotid sinus baroreceptors and decreased firing of the carotid sinus nerve. In an attempt to restore blood pressure, the parasympathetic outflow to the heart is decreased and sympathetic outflow is increased. As a result, heart rate and contractility will be increased. Mean systemic pressure will increase because of increased sympathetic tone of the veins and a shift of blood to the arteries. </p>
     <b>Microcirculation and Lymph</b><br>
     In a capillary, P<sub>c</sub> is 30mmHg, P<sub>i</sub> is -2mmHg, &pi;<sub>c</sub> is 25mmHg, and &pi;<sub>i</sub> is 2 mmHg. What is the direction of fluid movement and the net driving force? <br>
     <form>
@@ -1303,6 +1345,20 @@ Answer: <p style="color:white"> The net driving force can be calculated with the
 </form> 
       Answer: <p style="color:white"> K<sub>f</sub> is the filtration coefficient for the capillary and describes the intrinsic water permeability. <br>
       Water flow - K<sub>f</sub> x Net pressure = 0.5mL/min/mmHg * 9mmHg = 4.5 mL/min</p>
+      The tendency for edema to occur will be increased by <br>
+      <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. arteriolar constriction</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. increased venous pressure</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. increased plasma protein concentration</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. muscular activity</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> B. Edema occurs when more fluid is filtered out of the capillaries than can be returned to the circulation by the lymphatics. Filtration is increased by changes that increase P<sub>c</sub> or decrease &pi;<sub>c</sub>. Arteriolar constriction would decrease P<sub>c</sub> and decrease filtration. Dehydration would increase plasma protein concentration (by hemoconcentration) and thereby increase &pi;<sub>c</sub> and decrease filtration. Increased venous pressure would increase P<sub>c</sub> and filtration.</p>
   <b>Special Circulations</b><br>
       In which of the following situations is pulmonary blood flow greater than aortic blood flow?<br>
       <form>
@@ -1319,6 +1375,20 @@ Answer: <p style="color:white"> The net driving force can be calculated with the
 </form> 
 Answer: <p style="color:white"> In a left to right ventricular shunt, a defect in the ventricular septum allows blood to flow from the left ventricle to the right ventricle instead of being ejected into the aorta. The shunted fraction of the left ventricular output is therefore added to the output of the right vemtroc;e, making pulmonary blood flow higher than systemic blood flow. In normal adults, the outputs of both ventricles are equal in the steady state. In the fetus, pulmonary blood flow is near 0. Right ventricular ailure results in decreased pulmonary blood flow. Administration of a positive inotropic agent should have the same effect on contractility and cardiac output in both ventricles.</p>
   <b>Integrative Functions of the Cardiovascular System: Gravity, Exercise, and Hemorrhage</b><br>
+      During exercise, total peripheral resistance decreases because of the effect of <br>
+      <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. the sympathetic nervous system on splanchnic arterioles</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. the parasympathetic nervous system on skeletal muscle arterioles</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. local metabolites on skeletal muscle arterioles</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. local metabolites on cerebral arterioles</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. histamine on skeletal muscle arterioles</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. During exercise, local metabolites accumulate in the exercising muscle and cause local vasodilation and decreased arteriolar resistance of the skeletal muscle. Because muscle mass is large, it contributes a large fraction of the total peripheral resistance. Therefore, the skeletal muscle vasodilation results in an overall decrease in TPR, even though there is sympathetic vasoconstriction in other vascular beds.</p>
   <h2>Respiratory Physiology</h2><br>
   <b>Lung Volumes and Capacities</b><br>
   <b>Mechanics of breathing</b><br>
